# STDF_PARSER

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RELEASE_NOTES.md  build-dmg.command  build-mac-app.command  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml  release.yml
packaging/: build-dmg.sh  build-signed-dmg.sh
packaging/dmg/: install-background.py  install-background.tiff
src/: App.test.tsx  App.tsx  UpdateChecker.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/test/: fixtures.ts
stdf-core/: Cargo.toml
stdf-core/src/: lib.rs  parser.rs  sessions.rs
