[package]
name = "stdf-viewer-mac"
version = "0.1.3"
description = "Mac STDF field browser"
authors = []
edition = "2021"

[lib]
name = "stdf_viewer_mac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stdf-core = { path = "../stdf-core" }
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.3.2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
